# hanaquantchallenge

./: .gitignore  backtest.ipynb  eda.ipynb  pyproject.toml
output/: quantstats-tearsheet.html
